# huffman-packr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: config.hpp  file.hpp  table.hpp  tree.hpp  utils.hpp
include/qt/: mainWindow.hpp
src/: config.cpp  file.cpp  main.cpp  table.cpp  tree.cpp  utils.cpp
src/qt/: mainQt.cpp  mainWindow.cpp  mainWindow.ui
